--- a/data/scripts/build
+++ b/data/scripts/build
@@ -24,9 +24,6 @@ export REPO_NAME="${REPO_NAME:-}"
 # Configure the Docker Glance Image Name
 export IMAGE_NAME="${IMAGE_NAME:-glance}"
 
-# Configure the Hostname used within the Glance container
-export HOSTNAME="${HOSTNAME:-$HOSTNAME}"
-
 # Backend scheme Glance uses by default to store images.
 # Options are file (default) and swift.
 export DEFAULT_STORE="${DEFAULT_STORE:-file}"
@@ -53,10 +50,10 @@ export RABBIT_PASSWORD="${RABBIT_PASSWORD:-guest}"
 export KEYSTONE_HOST="${KEYSTONE_HOST:-127.0.0.1}"
 
 # Configure the Keystone Admin API Listening Port
-export KEYSTONE_ADMIN_PORT="${KEYSTONE_ADMIN_PORT:-35357}"
+export KEYSTONE_ADMIN_CONTAINER_PORT="${KEYSTONE_ADMIN_CONTAINER_PORT:-35357}"
 
 # Configure the Keystone Public API Listening Port
-export KEYSTONE_PUBLIC_PORT="${KEYSTONE_PUBLIC_PORT:-5000}"
+export KEYSTONE_PUBLIC_CONTAINER_PORT="${KEYSTONE_PUBLIC_CONTAINER_PORT:-5000}"
 
 # Configure the Service Tenant
 export SERVICE_TENANT="${SERVICE_TENANT:-service}"
@@ -93,8 +90,8 @@ ENV RABBIT_HOST $RABBIT_HOST
 ENV RABBIT_USER $RABBIT_USER
 ENV RABBIT_PASSWORD $RABBIT_PASSWORD
 ENV KEYSTONE_HOST $KEYSTONE_HOST 
-ENV KEYSTONE_ADMIN_PORT $KEYSTONE_ADMIN_PORT
-ENV KEYSTONE_PUBLIC_PORT $KEYSTONE_PUBLIC_PORT
+ENV KEYSTONE_ADMIN_CONTAINER_PORT $KEYSTONE_ADMIN_CONTAINER_PORT
+ENV KEYSTONE_PUBLIC_CONTAINER_PORT $KEYSTONE_PUBLIC_CONTAINER_PORT
 ENV SERVICE_TENANT $SERVICE_TENANT
 ENV SERVICE_PASSWORD $SERVICE_PASSWORD
 ENV DEMO_USER_PASSWORD $DEMO_USER_PASSWORD
